# radicads_design_poc

./: API_ROUTES_COMPLETE_MAPPING.md  CODE_REVIEW_REPORT.md  COMPLETE_CORS_FIX_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_COMPLETE.md  DEBUGGING_CANVAS_ISSUE.md  FABRIC_JS_MIGRATION_PLAN.md  FABRIC_JS_MIGRATION_STATUS.md  FABRIC_JS_TESTING_GUIDE.md  FIX_GENERATE_DESIGN_CORS_ISSUE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE_SUMMARY.md  PROMPT_ENGINEERING_DELIVERABLES.md  QUICK_REFERENCE_API_PATTERNS.md  QUICK_START_FIXES.md  README.md  SERVER_RESTART_GUIDE.md  SESSION_SUMMARY_2025-11-24.md  SETUP_GUIDE.md  TROUBLESHOOTING_FRONTEND_BACKEND_CONNECTION.md  kill-port.ps1  response_final.json  test-api.html  test_exact_curl.json  test_gemini_curl.json  test_real_api.py  test_request.json
backend/: .env.example  .gitignore  SETUP.md  clean_venv.py  pyproject.toml  restart_backend.ps1  setup.py  start.ps1  start_server.ps1  test_gemini.py  test_gemini_models.py  test_model.py  test_response.json
backend/app/: main.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py
backend/app/db/: supabase.py
backend/app/prompts/: ad_creative_system_prompt.py  image_generation_prompts.py
backend/app/schemas/: ai_models.py  asset.py  brand.py  canonical_design.py  design.py  replicate_models.py
backend/app/services/: ai_image.py  ai_layout.py  replicate_service.py  (+2 more)
backend/examples/: README.md  nano_banana_pro_example.py  nano_banana_pro_simple.py
backend/misc_tests/: test_api_key_debug.py  test_backend_api.py  test_gemini_api.py  test_gemini_rest.py
(+66 files in other folders)
